Fix placeholder text cut off

--- a/public/css/colours.scss
+++ b/public/css/colours.scss
@@ -84,7 +84,6 @@ $colour-textinput-border-active: $colour-utility-info;
 $colour-textinput-border-disabled: #adadad;
 $colour-textinput-border-valid: $colour-utility-success;
 $colour-textinput-border-invalid: $colour-utility-error;
-$colour-textinput-text: $colour-dark-blue;
 $colour-textinput-text: $colour-admiralty-blue;
 $colour-textinput-text-active: $colour-utility-info;
 $colour-textinput-text-disabled: #adadad;
