--- a/public/css/material-search-overwrites.scss
+++ b/public/css/material-search-overwrites.scss
@@ -29,8 +29,7 @@
     div.mat-form-field-outline div.mat-form-field-outline-end {
         border-left-style: none;
     }
-    
-    
+
     // background
     div.mat-form-field-outline {
         background: $colour-textinput-bg;
@@ -86,5 +85,43 @@
 
     button p, input[type='button'] p {
         padding-top: 0;
+    }
+
+    // placeholder text
+
+    ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+       color: $colour-textinput-text;
+       overflow: visible;
+    }
+    ::-moz-placeholder { /* Firefox 19+ */
+      color: $colour-textinput-text;
+      overflow: visible;
+    }
+    :-ms-input-placeholder { /* IE 10+ */
+        color: $colour-textinput-text;
+        overflow: visible;
+    }
+    :-moz-placeholder { /* Firefox 18- */
+       color: $colour-textinput-text;
+       overflow: visible;
+    }
+
+    .mat-form-field.mat-focused {
+        ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+            color: $colour-textinput-text-active;
+            overflow: visible;
+        }
+        ::-moz-placeholder { /* Firefox 19+ */
+            color: $colour-textinput-text-active;
+            overflow: visible;
+        }
+        :-ms-input-placeholder { /* IE 10+ */
+            color: $colour-textinput-text-active;
+            overflow: visible;
+        }
+        :-moz-placeholder { /* Firefox 18- */
+            color: $colour-textinput-text-active;
+            overflow: visible;
+        }
     }
 }
